@@ -27,6 +27,14 @@ AUTOSWAP=no
             EOF
           )
         }
+
+        if facts[:init_systems].include?('systemd')
+          it { is_expected.to contain_systemd__unit_file('emergency.service').with_content(/ExecStart=.+sulogin/) }
+          it { is_expected.to contain_systemd__unit_file('rescue.service').with_content(/ExecStart=.+sulogin/) }
+        else
+          it { is_expected.to_not contain_systemd__unit_file('emergency.service') }
+          it { is_expected.to_not contain_systemd__unit_file('rescue.service') }
+        end
       end
     end
   end
